--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dh-python (5.20211218) UNRELEASED; urgency=medium
 
   * pybuild: fix rst2man error, thanks Louis-Philippe Véronneau.
+  * pybuild: Use the pytest runner for one of the pep517 test suites.
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 22 Dec 2021 19:55:30 -0400
 
