--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dh-python (5.20211226) UNRELEASED; urgency=medium
   * debian/rules: respect DEB_BUILD_OPTIONS=nocheck, thanks Antonio Terceiro.
   * dh_python2(1) and dh_python3(1): Correct the field order for pyinstall
     files.
+  * Rename pep517 plugin to pyproject, we expect this to be amended by future
+    PEPs.
 
  -- Stefano Rivera <stefanor@debian.org>  Sat, 25 Dec 2021 12:47:00 -0400
 
