--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ dh-python (5.20211226) UNRELEASED; urgency=medium
     files.
   * Rename pep517 plugin to pyproject, we expect this to be amended by future
     PEPs.
+  * Allow explicitly selecting a pybuild plugin with a Build-Depends on
+    pybuild-plugin-NAME.
 
  -- Stefano Rivera <stefanor@debian.org>  Sat, 25 Dec 2021 12:47:00 -0400
 
