Drop the other pybuild plugin Provides

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ dh-python (5.20211226) UNRELEASED; urgency=medium
   * Rename pep517 plugin to pyproject, we expect this to be amended by future
     PEPs.
   * Allow explicitly selecting a pybuild plugin with a Build-Depends on
-    pybuild-plugin-NAME.
+    pybuild-plugin-NAME, when such a binary package exists.
 
  -- Stefano Rivera <stefanor@debian.org>  Sat, 25 Dec 2021 12:47:00 -0400
 
