--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dh-python (5.20211231) UNRELEASED; urgency=medium
+
+  * Handle parenthetical environment markers.
+
+ -- Stefano Rivera <stefanor@debian.org>  Fri, 31 Dec 2021 11:46:00 -0400
+
 dh-python (5.20211230) unstable; urgency=medium
 
   * Source-only upload.
