--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dh-python (5.20220101) UNRELEASED; urgency=medium
+
+  * Handle complex environment markers with both quote types.
+
+ -- Stefano Rivera <stefanor@debian.org>  Sat, 01 Jan 2022 12:06:23 -0400
+
 dh-python (5.20211231) unstable; urgency=medium
 
   * Handle parenthetical environment markers.
