--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dh-python (5.20220102) UNRELEASED; urgency=medium
+
+  * Allow passing arguments to tox tests.
+
+ -- Stefano Rivera <stefanor@debian.org>  Tue, 11 Jan 2022 15:27:54 -0400
+
 dh-python (5.20220101) unstable; urgency=medium
 
   * Handle complex environment markers with both quote types.
