Update pydist fallback database.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dh-python (5.20220102) UNRELEASED; urgency=medium
   * Allow passing arguments to tox tests.
   * cmake plugin: Don't quote arguments that will be substituted (and quoted)
     by shell_command. (closes: 1003962)
+  * Update pydist fallback database.
 
  -- Stefano Rivera <stefanor@debian.org>  Tue, 11 Jan 2022 15:27:54 -0400
 
