--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dh-python (5.20220103) UNRELEASED; urgency=medium
 
   * dh_python3: Don't emit any warnings about unknown packages for modules
     that we won't depend on. (closes: 1004378)
+  * Drop Provides for dh-python-pep517, replaced by pybuild-plugin-pyproject.
 
  -- Stefano Rivera <stefanor@debian.org>  Thu, 27 Jan 2022 09:37:46 -0400
 
