--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dh-python (5.20220103) UNRELEASED; urgency=medium
   * dh_python3: Don't emit any warnings about unknown packages for modules
     that we won't depend on. (closes: 1004378)
   * Drop Provides for dh-python-pep517, replaced by pybuild-plugin-pyproject.
+  * Simplify generated dependencies for "; python_version > '3'" style
+    dependencies.
 
   [ Scott Kitterman ]
   * Update source lintian overrides
