--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dh-python (5.20220216) UNRELEASED; urgency=medium
 
   * Refresh pydist.
+  * Replace which with command -v in autoscripts, thanks Diederik de Haas.
 
  -- Stefano Rivera <stefanor@debian.org>  Fri, 18 Mar 2022 21:24:01 -0400
 
