--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dh-python (5.20220216) UNRELEASED; urgency=medium
   * Replace which with command -v in autoscripts, thanks Diederik de Haas.
   * Add support for --test-custom/PYBUILD_TEST_CUSTOM. Thanks, Antonio
     Terceiro!
+  * Correctly handle --interpreter python3.10 (2-digit minor version).
+    (closes: 1008745)
 
  -- Stefano Rivera <stefanor@debian.org>  Fri, 18 Mar 2022 21:24:01 -0400
 
