--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dh-python (5.20220216) UNRELEASED; urgency=medium
+dh-python (5.20220403) unstable; urgency=medium
 
   * Refresh pydist.
   * Replace which with command -v in autoscripts, thanks Diederik de Haas.
@@ -7,7 +7,7 @@ dh-python (5.20220216) UNRELEASED; urgency=medium
   * Correctly handle --interpreter python3.10 (2-digit minor version).
     (closes: 1008745)
 
- -- Stefano Rivera <stefanor@debian.org>  Fri, 18 Mar 2022 21:24:01 -0400
+ -- Stefano Rivera <stefanor@debian.org>  Sun, 03 Apr 2022 15:45:19 -0400
 
 dh-python (5.20220215) unstable; urgency=medium
 
