--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dh-python (5.20220404) UNRELEASED; urgency=medium
+
+  * flit plugin: Explicitly install using the "deb_system" sysconfig scheme.
+
+ -- Stefano Rivera <stefanor@debian.org>  Wed, 11 May 2022 11:45:37 -0400
+
 dh-python (5.20220403) unstable; urgency=medium
 
   * Refresh pydist.
