--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dh-python (5.20220404) UNRELEASED; urgency=medium
   * Update location for python-policy in dh_python3(1), thanks Andrius Merkys.
   * autoscripts/prerm-{py3,pypy}clean: Use sed instead of perl, thanks Gioele
     Barabucci.
+  * pybuild.pm: Handle multiple (comma-separated) versions in
+    DEBPYTHON3_SUPPORTED. (closes: 1015774)
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 11 May 2022 11:45:37 -0400
 
