pybuild: Don't print stack traces when we can't initialize a plugin due to a missing command, it's confusing. (closes: 954215)

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dh-python (5.20220404) UNRELEASED; urgency=medium
     Barabucci.
   * pybuild.pm: Handle multiple (comma-separated) versions in
     DEBPYTHON3_SUPPORTED. (closes: 1015774)
+  * pybuild: Don't print stack traces when we can't initialize a plugin due to
+    a missing command, it's confusing. (closes: 954215)
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 11 May 2022 11:45:37 -0400
 
