pybuild cmake plugin: Add support for FindPython and FindPython3, available since CMake 3.12. (closes: 949377)

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ dh-python (5.20220404) UNRELEASED; urgency=medium
     DEBPYTHON3_SUPPORTED. (closes: 1015774)
   * pybuild: Don't print stack traces when we can't initialize a plugin due to
     a missing command, it's confusing. (closes: 954215)
+  * pybuild cmake plugin: Add support for FindPython and FindPython3,
+    available since CMake 3.12. (closes: 949377)
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 11 May 2022 11:45:37 -0400
 
