--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ dh-python (5.20220404) UNRELEASED; urgency=medium
   * dh_python3: Operate on binary packages that only Recommends:
     ${python3:Depends}, too. (closes: 1017001)
   * Port dh_python2/dh_python3/dh_pypy to argparse.
+  * dh_*: Parse -O=... options provided by debhelper. (closes: 949286)
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 11 May 2022 11:45:37 -0400
 
