--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ dh-python (5.20220404) UNRELEASED; urgency=medium
   * dh_*: Parse -O=... options provided by debhelper. (closes: 949286)
   * pybuild: Make --ext-dest-dir work again, when --name is specified.
     (closes: 942882)
+  * Remove the text in pybuild(1) describing pybuild-plugin-pyproject as being
+    in beta.
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 11 May 2022 11:45:37 -0400
 
