--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
 dh-python (5.20220820) UNRELEASED; urgency=medium
 
+  [ Stefano Rivera ]
   * Run Python test suite with nose2. (closes: 1018338)
   * Don't attempt to diff static libs (.a), thanks Nick Rosbrook.
     (closes: 1020528)
+
+  [ Debian Janitor ]
+  * Bump debhelper from old 12 to 13.
+    + Drop check for DEB_BUILD_OPTIONS containing "nocheck", since debhelper now
+      does this.
 
  -- Stefano Rivera <stefanor@debian.org>  Sun, 21 Aug 2022 18:19:24 +0200
 
