--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dh-python (5.20220820) UNRELEASED; urgency=medium
   * Run Python test suite with nose2. (closes: 1018338)
   * Don't attempt to diff static libs (.a), thanks Nick Rosbrook.
     (closes: 1020528)
+  * Bump Standards-Version to 4.6.1, no changes needed.
 
   [ Debian Janitor ]
   * Bump debhelper from old 12 to 13.
