--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dh-python (5.20221009) UNRELEASED; urgency=medium
+
+  * Support the nodoc and nocheck build profiles.
+
+ -- Stefano Rivera <stefanor@debian.org>  Sat, 15 Oct 2022 17:53:49 +0200
+
 dh-python (5.20221008) unstable; urgency=medium
 
   * Ignore python_*_version environment markers with versions we can't parse.
