--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dh-python (5.20221123) UNRELEASED; urgency=medium
     - Reduce the auto-detect score of the flit plugin.
   * dh_python3: Clean up more license files from dist-info directories.
   * Write to debhelper.log files, in overrides.
+  * Add support for --remaining-packages to dh_python*. (closes: 1021875)
 
  -- Stefano Rivera <stefanor@debian.org>  Tue, 22 Nov 2022 15:56:53 +0200
 
