--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ dh-python (5.20221123) UNRELEASED; urgency=medium
   * dh_python3: Clean up more license files from dist-info directories.
   * Write to debhelper.log files, in overrides.
   * Add support for --remaining-packages to dh_python*. (closes: 1021875)
+  * Add a test that demonstrates building multiple libraries in a single
+    source package. (closes: 1018952)
 
  -- Stefano Rivera <stefanor@debian.org>  Tue, 22 Nov 2022 15:56:53 +0200
 
