Upload to experimental, to go through binNEW.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-dh-python (5.20221203) UNRELEASED; urgency=medium
+dh-python (5.20221203) experimental; urgency=medium
 
+  * Upload to experimental, to go through binNEW.
   * Add autopkgtest runner pybuild-autopkgtest, thanks Antonio Terceiro.
     (closes: 1000803)
 
- -- Stefano Rivera <stefanor@debian.org>  Fri, 02 Dec 2022 11:53:46 -0400
+ -- Stefano Rivera <stefanor@debian.org>  Fri, 02 Dec 2022 13:14:44 -0400
 
 dh-python (5.20221202) unstable; urgency=medium
 
