--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dh-python (5.20221123) UNRELEASED; urgency=medium
+dh-python (5.20221202) unstable; urgency=medium
 
   * Deprecate the flit plugin in favour of pyproject.
     - Reduce the auto-detect score of the flit plugin.
@@ -11,7 +11,7 @@ dh-python (5.20221123) UNRELEASED; urgency=medium
     the removal of the Python 2.7 stack before bookworm release.
     (closes: 942959)
 
- -- Stefano Rivera <stefanor@debian.org>  Tue, 22 Nov 2022 15:56:53 +0200
+ -- Stefano Rivera <stefanor@debian.org>  Fri, 02 Dec 2022 13:13:51 -0400
 
 dh-python (5.20221122) unstable; urgency=medium
 
