Include ${misc:Depends} in pybuild-plugin-autopkgtest.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dh-python (5.20221204) UNRELEASED; urgency=medium
 
   * Regenerate pydist.
+  * Include ${misc:Depends} in pybuild-plugin-autopkgtest.
 
  -- Stefano Rivera <stefanor@debian.org>  Fri, 02 Dec 2022 16:01:10 -0400
 
