--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dh-python (5.20221204) UNRELEASED; urgency=medium
 
   * Regenerate pydist.
   * Include ${misc:Depends} in pybuild-plugin-autopkgtest.
+  * Run the autopkgtest nose test suite on all supported Python 3 versions.
 
  -- Stefano Rivera <stefanor@debian.org>  Fri, 02 Dec 2022 16:01:10 -0400
 
