--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dh-python (5.20221204) UNRELEASED; urgency=medium
   * Include ${misc:Depends} in pybuild-plugin-autopkgtest.
   * Run the autopkgtest nose test suite on all supported Python 3 versions.
   * Update lintian overrides.
+  * Install data into the system data directory, as pip would.
+    (closes: 1025485)
 
  -- Stefano Rivera <stefanor@debian.org>  Fri, 02 Dec 2022 16:01:10 -0400
 
