--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dh-python (5.20221204) UNRELEASED; urgency=medium
   * Install data into the system data directory, as pip would.
     (closes: 1025485)
   * Remove a left-over Depends on pypy in the autopkgtest.
+  * pybuild plugin: Stage the scripts and data one level up in the .pybuild
+    directory (rather than have to ignore them when we install the module).
 
  -- Stefano Rivera <stefanor@debian.org>  Fri, 02 Dec 2022 16:01:10 -0400
 
