Fix interaction between --test-custom and distutils plugin
If the distutils plugin found `test_suite` in setup.py, then the
`--test-custom` option didn't work properly, because the distutils
plugin prepended `{interpreter} {setup_py} test` to the custom test
arguments in that case.  Set `custom_tests` in the parsed arguments to
avoid that problem.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dh-python (5.20221206) UNRELEASED; urgency=medium
+
+  * Fix interaction between --test-custom and distutils plugin.
+
+ -- Colin Watson <cjwatson@debian.org>  Sat, 10 Dec 2022 22:29:02 +0000
+
 dh-python (5.20221205) unstable; urgency=medium
 
   * Regenerate pydist.
