--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dh-python (5.20221206) UNRELEASED; urgency=medium
 
   [ Stefano Rivera ]
   * Correct typo in nose autopkgtest.
+  * Export HOME in the pyproject plugin, as we do in the distutils one.
 
   [ Colin Watson ]
   * Fix interaction between --test-custom and distutils plugin.
