--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dh-python (5.20221206) UNRELEASED; urgency=medium
   [ Stefano Rivera ]
   * Correct typo in nose autopkgtest.
   * Export HOME in the pyproject plugin, as we do in the distutils one.
+  * Remove install_requires from test301, setuptools will parse this where
+    distutils historically wouldn't have.
 
   [ Colin Watson ]
   * Fix interaction between --test-custom and distutils plugin.
