Upload to unstable

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dh-python (5.20221206) UNRELEASED; urgency=medium
+dh-python (5.20221230) unstable; urgency=medium
 
   [ Stefano Rivera ]
   * Correct typo in nose autopkgtest.
@@ -17,7 +17,7 @@ dh-python (5.20221206) UNRELEASED; urgency=medium
     autopkgtest runner, use a different build stage. This way, packages with
     custom buildsystems can use pybuild-autopkgtest. (Closes: #1025737)
 
- -- Stefano Rivera <stefanor@debian.org>  Mon, 12 Dec 2022 17:03:04 -0400
+ -- Stefano Rivera <stefanor@debian.org>  Fri, 30 Dec 2022 09:47:32 -0400
 
 dh-python (5.20221205) unstable; urgency=medium
 
