--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dh-python (5.20230131) UNRELEASED; urgency=medium
     PEP386 almost a decade ago).
   * Add support for tox 4. Avoid needing to do an isolated build of the
     package by using the wheel we built, ourselves. (Closes: #1035675)
+    - Packages using the distutils plugin now need python3-wheel installed.
+      Raise an error explaining that wheel is needed, if it's missing.
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 01 Feb 2023 18:00:32 -0400
 
