--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dh-python (5.20230131) UNRELEASED; urgency=medium
     - Packages using the distutils plugin now need python3-wheel installed.
       Raise an error explaining that wheel is needed, if it's missing.
     - Support all 3 potential tox configuration files. (Closes: #1033486)
+  * dh_python3: Write a "debian" INSTALLER file into dist-info directories.
+    (Closes: #1032133)
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 01 Feb 2023 18:00:32 -0400
 
