Use cachy as an example dependency instead of tomli, in tests.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ dh-python (5.20230131) UNRELEASED; urgency=medium
     (Closes: #1032133)
   * Use tomllib (available since Python 3.11) instead of tomli.
     (Closes: #1032866)
+  * Use cachy as an example dependency instead of tomli, in tests.
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 01 Feb 2023 18:00:32 -0400
 
