--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,7 @@
-dh/*        usr/share/perl5/Debian/Debhelper/Sequence/
-dh_pypy     usr/share/dh-python/
-dh_python2  usr/share/dh-python/
-dh_python3  usr/share/dh-python/
-pybuild     usr/share/dh-python/
+dh/*            usr/share/perl5/Debian/Debhelper/Sequence/
+dh/pybuild.pm   usr/share/perl5/Debian/Debhelper/Buildsystem/
+dh_pypy         usr/share/dh-python/
+dh_python2      usr/share/dh-python/
+dh_python3      usr/share/dh-python/
+pybuild         usr/share/dh-python/
+dhpython        usr/lib/python2.7/dist-packages/
